[gd_scene load_steps=5 format=3 uid="uid://po7pmftb1orn"]

[ext_resource type="Script" path="res://addons/clyde/editor/player/player.gd" id="1_nuwy5"]
[ext_resource type="Texture2D" uid="uid://dor1hukueyx7s" path="res://addons/clyde/editor/assets/clyde.svg" id="2_m8qso"]

[sub_resource type="Image" id="Image_dkb8q"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_rtxbf"]
image = SubResource("Image_dkb8q")

[node name="Player" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nuwy5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="dialogue_name" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "No dialogue"
horizontal_alignment = 1

[node name="close" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 8
flat = true

[node name="LinesMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 40

[node name="lines" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/LinesMargin"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="dialogue_lines" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/LinesMargin/lines"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="actions" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Block" type="OptionButton" parent="HBoxContainer/VBoxContainer/actions"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Selected Block"
disabled = true
text_overrun_behavior = 3
item_count = 3
selected = 0
popup/item_0/text = "Default"
popup/item_0/id = 0
popup/item_1/text = "Default"
popup/item_1/id = 1
popup/item_2/text = "Default"
popup/item_2/id = 2

[node name="restart" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Restart Dialogue"
disabled = true
icon = SubResource("ImageTexture_rtxbf")

[node name="next_line" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Next Line"
disabled = true
icon = SubResource("ImageTexture_rtxbf")

[node name="forward" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Foward to Next Choice"
disabled = true
icon = SubResource("ImageTexture_rtxbf")

[node name="poltergeist" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Poltergeist Mode (auto-select)"
disabled = true
icon = ExtResource("2_m8qso")

[node name="clear_mem" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Clear Memory"
icon = SubResource("ImageTexture_rtxbf")

[node name="multi_single" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Toggle Multi-Bubble Mode"
toggle_mode = true
button_pressed = true
icon = SubResource("ImageTexture_rtxbf")

[node name="show_meta" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Show Metadata"
toggle_mode = true
icon = SubResource("ImageTexture_rtxbf")

[node name="show_debug" type="Button" parent="HBoxContainer/VBoxContainer/actions"]
layout_mode = 2
tooltip_text = "Show Debug Panel"
toggle_mode = true
icon = SubResource("ImageTexture_rtxbf")

[connection signal="button_up" from="HBoxContainer/VBoxContainer/MarginContainer/close" to="." method="_on_close_button_up"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/actions/Block" to="." method="_on_block_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/actions/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/actions/next_line" to="." method="_on_next_line_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/actions/forward" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/actions/poltergeist" to="." method="_on_poltergeist_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/actions/clear_mem" to="." method="_on_clear_mem_pressed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/actions/multi_single" to="." method="_on_multi_single_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/actions/show_meta" to="." method="_on_show_meta_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/actions/show_debug" to="." method="_on_show_debug_toggled"]
